# Quidditch

./: .gitignore  .gitmodules  Bender.yml  CMakeLists.txt  README.md  pyproject.toml  requirements_frozen.txt
.claude/skills/autotune-snitch-kernel/: SKILL.md
.github/workflows/: build.yaml
codegen/compiler/src/Quidditch/Conversion/: CMakeLists.txt  ConvertDMAToLLVM.cpp  ConvertSnitchToLLVM.cpp  ConvertToRISCV.cpp  Passes.td
codegen/compiler/src/Quidditch/Dialect/DMA/IR/: DMAOps.cpp
codegen/compiler/src/Quidditch/Dialect/Snitch/IR/: CMakeLists.txt  QuidditchSnitchOps.cpp  QuidditchSnitchOps.h  QuidditchSnitchOps.td
codegen/compiler/src/Quidditch/Dialect/Snitch/Transforms/: LowerForallOp.cpp  LowerL1Allocations.cpp  LowerPipelineOp.cpp  Passes.td  PipelineCopyCompute.cpp
codegen/compiler/src/Quidditch/Dialect/SnitchDMA/IR/: SnitchDMAOps.cpp  SnitchDMAOps.h
docs/: host-device-split-phase1.md  host-device-split-phase2.md  host-device-split.md  kernel-autotuner.md
runtime/: requirements.txt
runtime/cmake/: quidditch_module.cmake
runtime/host/: README.md
runtime/host/app/: Makefile  phase1_gemm.c
runtime/host/cheshire/: build_cheshire.sh  build_cheshire_dram.sh  cheshire_bridge.c  dram_host.ld  hybrid.ld  l2host.ld  qcs_gemm_seed.c  qcs_offload_nojob.c  quidditch_gemm_main.c  shared_region_cheshire.c
runtime/host/firmware/: Makefile  cluster_replay.c  cluster_replay.h  test_cluster_replay.c
runtime/host/firmware/gwaihir/: .gitignore  README.md  app.mk  main.c  qcs_kernel_abi.h  qcs_replay.c  qcs_replay.h  qcs_world_comm.c  quidditch_snrt_exports.c
runtime/host/hal/cluster/: Makefile  cluster_allocator.c  cluster_allocator.h  cluster_command_buffer.c  cluster_command_buffer.h  cluster_device.c  cluster_device.h  test_cluster_allocator.c  test_cluster_command_buffer.c  test_cluster_device.c
runtime/host/patches/: README.md  gwaihir-mesh-generalize.patch  iree-verify-off.patch
runtime/host/transport/: Makefile  cluster_command_stream.c  cluster_command_stream.h  shared_region.c  shared_region.h  test_command_stream.c  test_shared_region.c
runtime/runtime/src/Quidditch/command_buffer/: command_buffer.c  command_buffer.h
runtime/runtime/src/Quidditch/device/: CMakeLists.txt  device.c  semaphore.c  semaphore.h
runtime/runtime/src/Quidditch/dispatch/: dispatch.c
runtime/runtime/src/Quidditch/executable/: executable.c  executable.h  executable_library.h
runtime/samples/: CMakeLists.txt
runtime/samples/big_matvec/: CMakeLists.txt  main.c
runtime/samples/gemm_a1/: CMakeLists.txt  gemm_kernel.S  main.c
runtime/samples/gemm_square/: CMakeLists.txt  gemm_square.mlir  harness.c  main.c
runtime/samples/nsnet2/: nsnet2_util.c
runtime/samples/softmax_linear/: CMakeLists.txt  SoftmaxLinear.py  main.c  softmax_linear.mlir  softmax_linear_util.c  softmax_linear_util.h
runtime/samples/util/: run_model.c
runtime/snitch_cluster/: CMakeLists.txt
runtime/snitch_cluster/rtl/src/: quidditch_cluster_defs.h  quidditch_snrt_exports.cc  snitch_cluster_start.c  snrt.cc  snrt.h  syscalls.c
runtime/tests/: CMakeLists.txt
scripts/: but-commit-submodules.sh  run_on_sim.sh
tools/autotune/: .gitignore  CFG_DRIVEN_TARGET.md  KERNELS.md  MEMORY_BOUND_GAP.md  SNITCH_KERNEL_NOTES.md  apply.py  best_ewadd.json  best_gemm_bigk.json  best_gemm_plain.json  best_gemm_square.json  best_gemm_tall.json  cost_model.py  direct_build.py  gen_harness.py  harness.c.in  scaffold_op.py  spec.py  sweep.py  tier2.py
tools/autotune/agent/: LICENSE.autokernel  agent_loop.py  author_pass.py  orchestrate.py  profile_model.py  program.md
tools/autotune/agent/example_passes/: agent_noop.py
tools/autotune/ops/: ewadd.mlir  ewadd.toml  gemm_bigk.mlir  gemm_bigk.toml  gemm_plain.mlir  gemm_plain.toml  gemm_square.toml  gemm_tall.mlir  gemm_tall.toml  twomm_model.mlir
