[project]
name = "quidditch"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "lit==18.1.*",
  "hjson==3.1.*",
  "jsonref==1.1.*",
  "mako==1.3.*",
  "jsonschema==4.21.*",
  "tabulate==0.9.*",
  "PyYAML==6.0.*",
  "pandas==2.2.2",
  "progressbar2==4.4.2",
  "setuptools",
  "numpy==2.1.0",
  "torch==2.3.0",
  "iree-turbine==2.3.0",
  "iree-compiler==20240724.964",
  "iree-runtime==20240724.964",
  "typing-extensions==4.15.0",
  "xdsl",
  "snitch",
]

[tool.uv]
package = false

[tool.uv.sources]
xdsl = { path = "xdsl", editable = true }
snitch = { path = "snitch_cluster", editable = true }
